--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns:form="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -12,7 +12,30 @@
 <body>
 <div class="container">
     <div class="row">
-<!--        <div th:replace="/navbar :: navbar"></div>-->
+        <div class="col-md-4 col-lg-3 navbar-container bg-light">
+            <!-- Вертикальное меню -->
+            <nav class="navbar navbar-expand-md navbar-light">
+                <a class="navbar-brand"><h3>Cписок отделов</h3></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <hr class="mb-1">
+                <div class="collapse navbar-collapse" id="navbar">
+                    <!-- Пункты вертикального меню -->
+                    <ul class="navbar-nav">
+                        <li class="nav-item" th:each="department : ${departments}">
+                            <a class="nav-link"
+                               th:href="@{/users/{idDepartment}(idDepartment=${department.iddepartment})}"
+                               th:text="${department.namedepartment}"></a>
+                        </li>
+                        <hr class="mb-2">
+                        <li><a th:href="@{/}"
+                               class="btn btn-warning btn-block">На главную</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
         <div class="col">
             <div th:switch="${#lists.size(users)}">
                 <div th:case="0"><h2 style="margin-top: 50%;">В этом отделе нет сотрудников или отдел не существует</h2>
